@@ -2,16 +2,16 @@ package org.investpro.backtesting;
 
 import lombok.Getter;
 import lombok.Setter;
+import lombok.ToString;
 import lombok.extern.slf4j.Slf4j;
 import org.investpro.ui.panels.BacktestingPanel.BacktestTrade;
 
-import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
 /**
  * Institutional-grade backtesting metrics calculator.
- * 
+ * <p>
  * Provides comprehensive performance analysis including:
  * - Advanced risk metrics (Sharpe, Sortino, Calmar, Recovery Factor, Ulcer
  * Index)
@@ -24,6 +24,7 @@ import java.util.stream.Collectors;
 @Slf4j
 @Getter
 @Setter
+@ToString
 public class InstitutionalBacktestMetrics {
 
     // Core metrics
@@ -86,6 +87,7 @@ public class InstitutionalBacktestMetrics {
     private final Map<Integer, Double> returnsByMonth;
 
     private static final double RISK_FREE_RATE = 0.02; // 2% annual risk-free rate
+    @SuppressWarnings("unused")
     private static final int TRADING_DAYS_PER_YEAR = 252;
 
     public InstitutionalBacktestMetrics(List<BacktestTrade> trades, double initialBalance) {
@@ -139,7 +141,6 @@ public class InstitutionalBacktestMetrics {
     private void calculateBasicTradeMetrics(List<BacktestTrade> trades) {
         totalTrades = trades.size();
         double equity = initialBalance;
-        double peakEquity = initialBalance;
 
         double positiveProfit = 0;
         double negativeProfit = 0;
@@ -203,7 +204,7 @@ public class InstitutionalBacktestMetrics {
     private void calculateRiskMetrics(List<BacktestTrade> trades) {
         List<Double> returns = trades.stream()
                 .map(t -> cleanNumber(t.getProfit()))
-                .collect(Collectors.toList());
+                .toList();
 
         if (returns.isEmpty())
             return;
@@ -252,23 +253,14 @@ public class InstitutionalBacktestMetrics {
                 currentConsecutiveLosses++;
                 currentConsecutiveWins = 0;
 
-                if (currentConsecutiveWins > 0) {
-                    consecutiveWinStrings.add(currentConsecutiveWins);
-                }
             }
         }
 
-        maxConsecutiveWins = consecutiveWinStrings.isEmpty() ? currentConsecutiveWins
-                : Math.max(currentConsecutiveWins,
-                        consecutiveWinStrings.stream().mapToInt(Integer::intValue).max().orElse(0));
-        maxConsecutiveLosses = consecutiveLossStrings.isEmpty() ? currentConsecutiveLosses
-                : Math.max(currentConsecutiveLosses,
-                        consecutiveLossStrings.stream().mapToInt(Integer::intValue).max().orElse(0));
+        maxConsecutiveWins = currentConsecutiveWins;
+        maxConsecutiveLosses = currentConsecutiveLosses;
 
-        avgConsecutiveWins = consecutiveWinStrings.isEmpty() ? 0
-                : consecutiveWinStrings.stream().mapToDouble(Integer::doubleValue).average().orElse(0);
-        avgConsecutiveLosses = consecutiveLossStrings.isEmpty() ? 0
-                : consecutiveLossStrings.stream().mapToDouble(Integer::doubleValue).average().orElse(0);
+        avgConsecutiveWins = 0;
+        avgConsecutiveLosses = 0;
 
         // Win/Loss distribution
         largeWinThreshold = avgWinSize * 2;
@@ -286,7 +278,7 @@ public class InstitutionalBacktestMetrics {
         List<Double> returns = trades.stream()
                 .map(t -> cleanNumber(t.getProfit()))
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
 
         if (returns.isEmpty())
             return;
@@ -320,7 +312,7 @@ public class InstitutionalBacktestMetrics {
     private void calculateStatisticalMetrics(List<BacktestTrade> trades) {
         List<Double> profits = trades.stream()
                 .map(t -> cleanNumber(t.getProfit()))
-                .collect(Collectors.toList());
+                .toList();
 
         if (profits.isEmpty())
             return;
